--- a/customer-order-ui-service/package.json
+++ b/customer-order-ui-service/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "config": "^3.3.2",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.8"
   }
 }
